--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,13 @@ classifiers = [
 dependencies = [
     "mcp>=1.9.0",
     "playwright>=1.40.0",
-    "google-generativeai>=0.8.0",
     "httpx>=0.27.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
     "aiofiles>=24.0.0",
     "Pillow>=10.0.0",
+    "google-genai>=1.0.0",
 ]
 
 [project.optional-dependencies]
