fix: address all CodeRabbit review comments
- Fix actions/checkout@v6 to @v5 in release workflow (v6 doesn't exist)
- Add uv caching with enable-cache: true to release workflow
- Fix JSON.parse injection vulnerability using environment variable
- Add array validation for PRs JSON
- Replace hardcoded path ~/github/animawatch with /path/to/animawatch
- Add blank lines around fenced code blocks (MD031 compliance)
- Add threshold validation (0.0-1.0) in ci_integration.py
- Track previous URL in multipage_workflow.py instead of using about:blank
- Add ValueError when first step has no URL
- Remove mock call assertion from test_vision.py (test implementation details)
- Fix deprecated asyncio.get_event_loop().time() with time.monotonic()
- Add aiofiles for async file I/O to avoid blocking event loop
- Add MIME type detection for images using mimetypes.guess_type()
- Add URI validation before creating video Part
- Narrow exception suppression from Exception to specific types
- Add reset() method to CircuitBreaker for test isolation
- Add asyncio.Lock for thread-safe CircuitBreaker operations
- Add async versions of CircuitBreaker methods
- Add comment justifying Any type for Ollama client
- Add types-aiofiles dev dependency for mypy type stubs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,3 +89,8 @@ exclude_lines = [
     "raise NotImplementedError",
 ]
 
+[dependency-groups]
+dev = [
+    "types-aiofiles>=25.1.0.20251011",
+]
+
