--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,23 @@ jobs:
       - name: Auto-merge Release PR
         if: ${{ steps.release.outputs.prs_created == 'true' }}
         uses: actions/github-script@v8
+        env:
+          PRS_JSON: ${{ steps.release.outputs.prs }}
         with:
           script: |
-            // Parse the prs JSON output to get PR numbers
-            const prs = JSON.parse('${{ steps.release.outputs.prs }}' || '[]');
+            // Parse the prs JSON output safely via environment variable
+            const prsJson = process.env.PRS_JSON || '[]';
+            let prs;
+            try {
+              prs = JSON.parse(prsJson);
+            } catch (e) {
+              core.warning(`Failed to parse PRs JSON: ${e.message}`);
+              prs = [];
+            }
+            if (!Array.isArray(prs)) {
+              core.warning('PRs output is not an array');
+              prs = [];
+            }
             for (const pr of prs) {
               const prNumber = pr.number;
               try {
@@ -61,10 +74,12 @@ jobs:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created == 'true' }}
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v5
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Set up Python
         run: uv python install 3.12
