feat: Add production-ready improvements, new examples, and fix Release Please (#5)
* NOLINEAR: migrate to google-genai SDK and add examples

- Replace deprecated google-generativeai with google-genai SDK
- Resolves protobuf vulnerability CVE-2026-0994 (was pinned <6.0 by old SDK)
- Update vision.py to use new genai.Client() async API
- Update test_vision.py for new SDK mocking patterns
- Add type ignore comments for mypy false positives on mock assertions
- Add examples directory with 3 demo scripts:
  - basic_animation_check.py: Record and analyze animations
  - screenshot_analysis.py: Static page visual analysis
  - accessibility_check.py: Visual accessibility checks

* NOLINEAR: format example files with ruff

* NOLINEAR: address CodeRabbit review comments

- Add timeout (MAX_PROCESSING_SECONDS=300) to video processing poll loop
- Move temp file cleanup to finally blocks in all example files
- Replace type: ignore comments with cast(AsyncMock, ...) pattern
- Initialize temp path variables before try blocks for proper cleanup

* NOLINEAR: address remaining CodeRabbit suggestions

- Remove internal state assertion (provider.model_name) in test_vision.py
- Add edge case test for empty/blank response in image analysis
- Now 50 tests total

* NOLINEAR: address final CodeRabbit suggestions

- Remove implementation detail assertion in test_init_with_api_key_creates_client
- Add type annotations to GeminiProvider.client and .model_name

* feat: add production-ready improvements and new examples

- Add 4 new example scripts:
  - visual_comparison.py: Compare pages for visual differences
  - multipage_workflow.py: Test user journeys across multiple pages
  - form_interaction.py: Test form interactions and input animations
  - ci_integration.py: CI/CD integration with structured output and exit codes

- Add production-ready modules:
  - logging.py: Structured JSON logging with timing decorators
  - retry.py: Retry logic with exponential backoff and circuit breaker pattern



--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = [
     "ruff>=0.4.0",
     "mypy>=1.10.0",
     "pip-audit>=2.7.0",
+    "types-aiofiles>=25.1.0.20251011",
 ]
 ollama = [
     "ollama>=0.3.0",
@@ -88,4 +89,3 @@ exclude_lines = [
     "if TYPE_CHECKING:",
     "raise NotImplementedError",
 ]
-
