--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,22 +32,44 @@ jobs:
 
       # Auto-merge the Release PR so every merge to main triggers a release
       - name: Auto-merge Release PR
-        if: steps.release.outputs.pr
+        if: ${{ steps.release.outputs.prs_created == 'true' }}
         uses: actions/github-script@v8
+        env:
+          PRS_JSON: ${{ steps.release.outputs.prs }}
         with:
           script: |
-            const prNumber = ${{ steps.release.outputs.pr }};
+            // Parse the prs JSON output safely via environment variable
+            const prsJson = process.env.PRS_JSON || '[]';
+            let prs;
             try {
-              await github.rest.pulls.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: prNumber,
-                merge_method: 'squash'
-              });
-              core.info(`✅ Release PR #${prNumber} merged successfully`);
-            } catch (error) {
-              core.warning(`⚠️ Failed to auto-merge Release PR #${prNumber}: ${error.message}`);
-              core.warning('Manual merge may be required if there are conflicts or branch protection rules.');
+              prs = JSON.parse(prsJson);
+            } catch (e) {
+              core.warning(`Failed to parse PRs JSON: ${e.message}`);
+              prs = [];
+            }
+            if (!Array.isArray(prs)) {
+              core.warning('PRs output is not an array');
+              prs = [];
+            }
+            for (const pr of prs) {
+              // Validate pr.number before using it
+              if (!pr || typeof pr.number !== 'number') {
+                core.warning(`Skipping invalid PR entry: ${JSON.stringify(pr)}`);
+                continue;
+              }
+              const prNumber = pr.number;
+              try {
+                await github.rest.pulls.merge({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  pull_number: prNumber,
+                  merge_method: 'squash'
+                });
+                core.info(`✅ Release PR #${prNumber} merged successfully`);
+              } catch (error) {
+                core.warning(`⚠️ Failed to auto-merge Release PR #${prNumber}: ${error.message}`);
+                core.warning('Manual merge may be required if there are conflicts or branch protection rules.');
+              }
             }
 
   # Build and attach artifacts to the GitHub Release
@@ -61,6 +83,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
 
       - name: Set up Python
         run: uv python install 3.12
